feat: permissions decorator for api endpoints

--- a/packages/locales/src/translations/en.json
+++ b/packages/locales/src/translations/en.json
@@ -53,6 +53,9 @@
   "auth.errors.failedToChangePassword": "Failed to change password. Please try again.",
   "auth.errors.failedToLogOutAll": "Failed to log out all devices. Please try again.",
   "auth.errors.unauthorized": "Unauthorized",
+  "auth.errors.insufficientPermissions": "Insufficient Permissions",
+  "auth.errors.roleAuthorizationRequired": "You don't have permission to access this resource. Please contact your administrator if you believe this is an error.",
+  "auth.errors.noRoleAssigned": "No role assigned to your account",
   "auth.settings.title": "Settings",
   "auth.settings.description": "Manage your account settings and security preferences.",
   "auth.settings.updatePasswordDescription": "Update your password. This will log you out of all devices for security.",
