--- a/packages/locales/src/translations/es.json
+++ b/packages/locales/src/translations/es.json
@@ -53,6 +53,9 @@
   "auth.errors.failedToChangePassword": "Error al cambiar la contraseña. Por favor intenta de nuevo.",
   "auth.errors.failedToLogOutAll": "Error al cerrar sesión en todos los dispositivos. Por favor intenta de nuevo.",
   "auth.errors.unauthorized": "No autorizado",
+  "auth.errors.insufficientPermissions": "Permisos Insuficientes",
+  "auth.errors.roleAuthorizationRequired": "No tienes permiso para acceder a este recurso. Por favor contacta a tu administrador si crees que esto es un error.",
+  "auth.errors.noRoleAssigned": "No tienes un rol asignado en tu cuenta",
   "auth.settings.title": "Configuración",
   "auth.settings.description": "Administra la configuración de tu cuenta y preferencias de seguridad.",
   "auth.settings.updatePasswordDescription": "Actualiza tu contraseña. Esto cerrará tu sesión en todos los dispositivos por seguridad.",
